[package]
name = "stackmap"
version = "0.1.0"
edition = "2021"
authors = ["Dean Chalk dean.chalk@gmail.com"]
description = "A fast stack-only hashmap for small high-performance scenarios"
license = "MIT"
repository = "https://github.com/deanchalk/stackmap"
homepage = "https://github.com/deanchalk/stackmap"

[dependencies]
